Insights Release 10.0 changes